--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <h1>Fun Run</h1>
             <nav>
                 <ul>
-                    <li><a href="">Download</a></li>
-                    <li><a href="">Gameplay</a></li>
-                    <li><a href="">Created By</a></li>
-                    <li><a href="">References</a></li> 
+                    <li><a href="#downs">Download</a></li>
+                    <li><a href="#play">Gameplay</a></li>
+                    <li><a href="#contri">Created By</a></li>
+                    <li><a href="#ref">References</a></li> 
                 </ul>
             </nav>
         </div>
-        <div class="download">
+        <div class="download" id="downs">
             <div class="download-area">
                 <h1>Help Jaadu <br>Escape Attack!</h1>
                 <h2>A Retro 90's Running Game<br>using Pygame Module</h2>
@@ -32,14 +32,14 @@
             </div>   
         </div>
         <h2>Gameplay</h2>
-        <div class="gameplay">
+        <div class="gameplay" id="play">
             <div class="screenshots">
                 <img src="images/screenshot-1.png" alt="">
                 <img src="images/screenshot-2.png" alt="">
                 <img src="images/screenshot-3.png" alt="">
             </div>
         </div>
-        <div class="contributions">
+        <div class="contributions" id="contri">
             <h2>Created By</h2>
             <div class="one">
                 <div class="tushar">
@@ -74,7 +74,7 @@
 
             </div>
         </div>
-        <footer class="footer">
+        <footer class="footer" id="ref">
             <p>@ Samueal Dsouza</p>
         </footer>
     </div>
