--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="download-area">
                 <h1>Help Jaadu <br>Escape Attack!</h1>
                 <h2>A Retro 90's Running Game<br>using Pygame Module</h2>
-                <button class="button-download"><h3 class="download-button">Download</h3></button>
+                <button class="button-download"><a href="https://github.com/Samueal07/Fun-Run"><h3 class="download-button">Download</h3></a></button>
             </div>   
         </div>
         <h2>Gameplay</h2>
