--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#downs">Download</a></li>
                     <li><a href="#play">Gameplay</a></li>
                     <li><a href="#contri">Created By</a></li>
-                    <li><a href="#ref">References</a></li> 
+                    <li><a href="#tools">Tools</a></li> 
                 </ul>
             </nav>
         </div>
@@ -73,11 +73,25 @@
                 </div>
 
             </div>
+
         </div>
-        <footer class="footer" id="ref">
-            <p>@ Samueal Dsouza</p>
-        </footer>
+        <div class="references" id="tools">
+            <h2>Created With</h2>
+            <div class="tools-1">
+                <div><img src="images/python.jfif" alt=""></div>
+                <div><img src="images/gd-develop.jfif" alt=""></div>
+            </div>
+            <div class="tools-2">
+                <div><img src="images/clear-code.png" alt=""></div>
+                <div><img src="images/pygame-logo1.png" alt=""></div>
+            </div>
+
+        </div>
+        
     </div>
+    <footer class="footer">
+        <p>@ Samueal Dsouza</p>
+    </footer>
     
 </body>
 </html>
